--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>パスワード変更画面</title>
+	<meta charset="UTF-8">
+	<title>パスワード変更画面</title>
 	<link rel="stylesheet" type="text/css" href="/css/headerFooter.css">
 	<link rel="stylesheet" type="text/css" href="/css/mypage.css">
 </head>
+
 <body>
 	<header th:replace="header"></header>
 	<main>
-	<br>
-	<br>
-	<ul th:if="${errorList}" th:each="error:${errorList}">
-		<li th:text="${error}"></li>
-	</ul>
-	<table border="1" id="table">
-		<tbody>
-		<tr>
-			<th class="tabletitle"><h2>パスワード変更</h2></th>
-		</tr>
-		<tr>
-			<td>
-			<form action="/account/setPassword" method="post" class="table">
-				<textbox>
-					<p class="title">パスワード</p>
-					<input type="text" name="oldPassword">
-					<br>
-					<p class="title">新しいパスワード</p>
-					<input type="text" name="newPassword">
-					<br>
-					<p class="title">確認用パスワード</p>
-					<input type="text" name="reNewPassword">
-				</textbox>
-				<br>
-				<button class="btn">変更</button>
-			</form>
-			</td>
-		</tr>
-		</tbody>
-	</table>
-	
-	<br>
-	<br>
-	<br>
-	<footer th:replace="footer"></footer>
+		<br>
+		<br>
+		<ul th:if="${errorList}" th:each="error:${errorList}">
+			<li th:text="${error}"></li>
+		</ul>
+		<table border="1" id="table">
+			<tbody>
+				<tr>
+					<th class="tabletitle">
+						<h2>パスワード変更</h2>
+					</th>
+				</tr>
+				<tr>
+					<td>
+						<form action="/account/setPassword" method="post" class="table">
+							<textbox>
+								<p class="title">パスワード</p>
+								<input type="text" name="oldPassword">
+								<br>
+								<p class="title">新しいパスワード</p>
+								<input type="text" name="newPassword">
+								<br>
+								<p class="title">確認用パスワード</p>
+								<input type="text" name="reNewPassword">
+							</textbox>
+							<br>
+							<button class="btn">変更</button>
+						</form>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<br>
+		<br>
+		<br>
+		<footer th:replace="footer"></footer>
 	</main>
 </body>
+
 </html>
