--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,14 +21,19 @@
 		<div class="container" th:if="${sellItemCount > 0}">
 			<div th:each="sellItem:${sellItemList}" class="box">
 				<p th:if="${sellItem.dealStatus == 3}">出品中</p>
-				<p th:if="!${sellItem.dealStatus == 3}">SOLD OUT</p>
+				<p th:if="!${sellItem.dealStatus == 3}" style="color: red;">SOLD OUT</p>
 				<image th:each="image:${imageList}" th:if="${image.itemId == sellItem.id}">
-				<img th:if="${image.style == 1}" th:src="'/img/' + ${image.imagePath}" th:alt="'/img/'+${image.imagePath}" class="img" /><imagemap th:if="${image.style == 2}" th:each="imageData:${imageDatas}"><img th:if="${image.id == imageData.itemImageId}" th:src="${'data:image/png;base64,'+ imageData.image}" th:alt="${'data:image/png;base64,'+ imageData.image}"></imagemap>
-					</image>
-				 <th:block th:each="textbook:${textbooks}"
+					<img th:if="${image.style == 1}" th:src="'/img/' + ${image.imagePath}"
+						th:alt="'/img/'+${image.imagePath}" class="img" />
+					<imagemap th:if="${image.style == 2}" th:each="imageData:${imageDatas}"><img
+							th:if="${image.id == imageData.itemImageId}"
+							th:src="${'data:image/png;base64,'+ imageData.image}"
+							th:alt="${'data:image/png;base64,'+ imageData.image}"></imagemap>
+				</image>
+				<th:block th:each="textbook:${textbooks}"
 					th:if="${textbook.id == sellItem.textbookId && sellItem.dealStatus == 3}">
 					<p><a th:href="'/item/' + ${sellItem.id}" th:text="${textbook.title}" class="iteminfo"></a></p>
-					
+
 					<!--価格表示-->
 					<th:block th:if="${sellItem.itemStatus == 1}">
 						<p id="" th:text="${#numbers.formatDecimal(textbook.price*1.0,0,'COMMA',0,'POINT')}+'円'"
@@ -50,7 +55,7 @@
 							style="text-align: center; font-size: 1.2em;"></p>
 					</th:block>
 				</th:block>
-				
+
 				<!--売り切れ商品-->
 				<th:block th:each="textbook:${textbooks}"
 					th:if="${textbook.id == sellItem.textbookId && sellItem.dealStatus != 3}">
