--- a/src/main/resources/templates/viewTimetable.html
+++ b/src/main/resources/templates/viewTimetable.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>授業詳細</title>
+	<meta charset="UTF-8">
+	<title>授業詳細</title>
 	<link rel="stylesheet" type="text/css" href="/css/viewTimetable.css" />
 </head>
+
 <body>
-<header th:replace="header"></header>
+	<header th:replace="header"></header>
 	<main>
 		<h1>授業詳細</h1>
 		<table border="1">
@@ -20,17 +22,33 @@
 			</tr>
 			<tr>
 				<th class="tabletitle">曜日・時限</th>
-				<td><span th:if="${lesson.day == 1}">月</span><span th:if="${lesson.day == 2}">火</span><span th:if="${lesson.day == 3}">水</span><span th:if="${lesson.day == 4}">木</span><span th:if="${lesson.day == 5}">金</span><span th:if="${lesson.day == 6}">土</span><span th:if="${lesson.day == 7}">日</span>・[[${lesson.period}]]</td>
+				<td><span th:if="${lesson.day == 1}">月</span><span th:if="${lesson.day == 2}">火</span><span
+						th:if="${lesson.day == 3}">水</span><span th:if="${lesson.day == 4}">木</span><span
+						th:if="${lesson.day == 5}">金</span><span th:if="${lesson.day == 6}">土</span><span
+						th:if="${lesson.day == 7}">日</span>・[[${lesson.period}]]</td>
 			</tr>
 			<tr th:if="${textbookCount > 0}">
 				<th th:rowspan="${textbookCount}" class="tabletitle">教科書</th>
-				<td><span th:utext="${textbook1.textbookUrl}"></span>　<span th:if="${history1.status == 1}">未購入</span><span th:if="${history1.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history1.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button class="changebtn">切替</button></form></td>
+				<td><span th:utext="${textbook1.textbookUrl}"></span>　<span
+						th:if="${history1.status == 1}">未購入</span><span th:if="${history1.status == 2}">購入済</span>
+					<form th:action="'/account/setHistory/' + ${history1.id}" method="post" style="display: inline;">
+						<input type="hidden" name="timetableId" th:value="${timetable.id}"><button
+							class="changebtn">切替</button></form>
+				</td>
 			</tr>
 			<tr th:if="${textbookCount > 1}" th:each="textbook:${textbooks}">
-				<td><span th:utext="${textbook.textbookUrl}"></span>　<th:block th:each="history:${histories}" th:if="${textbook.id == history.textbookId}"><span th:if="${history.status == 1}">未購入</span><span th:if="${history.status == 2}">購入済</span> <form th:action="'/account/setHistory/' + ${history.id}" method="post" style="display: inline;"><input type="hidden" name="timetableId" th:value="${timetable.id}"><button class="changebtn">切替</button></form></th:block></td>
+				<td><span th:utext="${textbook.textbookUrl}"></span>　<th:block th:each="history:${histories}"
+						th:if="${textbook.id == history.textbookId}"><span
+							th:if="${history.status == 1}">未購入</span><span th:if="${history.status == 2}">購入済</span>
+						<form th:action="'/account/setHistory/' + ${history.id}" method="post" style="display: inline;">
+							<input type="hidden" name="timetableId" th:value="${timetable.id}"><button
+								class="changebtn">切替</button></form>
+					</th:block>
+				</td>
 			</tr>
 		</table>
 		<button onclick="location.href='/account'" class="btn">戻る</button>
 	</main>
 </body>
+
 </html>
