--- a/src/main/resources/templates/addRequest.html
+++ b/src/main/resources/templates/addRequest.html
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>新規募集</title>
+	<meta charset="UTF-8">
+	<title>新規募集</title>
 
-<link rel="stylesheet" type="text/css" href="/css/addRequest.css">
+	<link rel="stylesheet" type="text/css" href="/css/addRequest.css">
 
-<!--画面ID:302 新規募集作成画面-->
+	<!--画面ID:302 新規募集作成画面-->
 </head>
+
 <body>
 	<header th:replace="header"></header>
 	<main>
-	<h1 class = "new">新規募集</h1>
-	<form action = "/bbs/addRequest" method ="post">
-	<table>
-		<tr>
-			<th>商品状態</th>
-			<td>
-				<input type ="radio" name ="item_status" value ="1" required>新品
-				<input type ="radio" name ="item_status" value ="2" required>中古
-				<input type ="radio" name ="item_status" value ="3" required>書き込みあり
-				<input type ="radio" name ="item_status" value ="4" required>破損あり
-				<input type ="radio" name ="item_status" value ="5" required>どちらでもよい
-			</td>
-		</tr>
-		<tr>
-			<th>教科書</th>
-			<td>
-				<label class="selectbox-2">
-				<select name = "title" required>
-					<option value="" disabled selected>タイトル名</option>
-					<option th:each = "textbook:${title}" th:value="${textbook.id}" th:text= "${textbook.title}"></option>
-				</select>
-				</label>
-			</td>
-		</tr>
-	</table>
-	<br>
-	<button class = "btn">投稿</button>
-	</form>
-<footer th:replace="footer"></footer>
-</main>
+		<h1 class="new">新規募集</h1>
+		<form action="/bbs/addRequest" method="post">
+			<table>
+				<tr>
+					<th>商品状態</th>
+					<td>
+						<input type="radio" name="item_status" value="1" required>新品
+						<input type="radio" name="item_status" value="2" required>中古
+						<input type="radio" name="item_status" value="3" required>書き込みあり
+						<input type="radio" name="item_status" value="4" required>破損あり
+						<input type="radio" name="item_status" value="5" required>どちらでもよい
+					</td>
+				</tr>
+				<tr>
+					<th>教科書</th>
+					<td>
+						<label class="selectbox-2">
+							<select name="title" required>
+								<option value="" disabled selected>タイトル名</option>
+								<option th:each="textbook:${title}" th:value="${textbook.id}"
+									th:text="${textbook.title}"></option>
+							</select>
+						</label>
+					</td>
+				</tr>
+			</table>
+			<br>
+			<button class="btn">投稿</button>
+		</form>
+		<footer th:replace="footer"></footer>
+	</main>
 </body>
+
 </html>
