--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,26 +10,27 @@
 <body>
 	<header th:replace="header"></header>
 	<main>
-	<form action="/home" method="get">
-		<input type="text" name="keyword" th:value="${keyword}" placeholder="キーワード検索">
-		<button class="searchbtn">検索</button>
-	</form>
-	<div class="row">
+		<form action="/home" method="get">
+			<input type="text" name="keyword" th:value="${keyword}" placeholder="キーワード検索">
+			<button class="searchbtn">検索</button>
+		</form>
+		<div class="row">
 
-		<th:block th:each="textbook:${textbooks}">
-			<div class="col">
-				<a th:href="@{/textbook/{id}(id=${textbook.id})}">
-					<img  th:if="${textbook.style == 1}" class="num" th:src="'/img/'+${textbook.textimg}"
-						th:alt="'/img/'+${textbook.textimg}"></img><img th:if="${textbook.style == 2}" th:src="${'data:image/png;base64,'+ textbook.image}" />
-				</a>
-				<th:block th:each="textbook:${textbook}">
-					<p th:text="${textbook.title}"></p>
-					<p th:text="${textbook.price}+'円'"></p>
-				</th:block>
-			</div>
-		</th:block>
-	</div>
-	<footer th:replace="footer"></footer>
+			<th:block th:each="textbook:${textbooks}">
+				<div class="col">
+					<a th:href="@{/textbook/{id}(id=${textbook.id})}">
+						<img th:if="${textbook.style == 1}" class="num" th:src="'/img/'+${textbook.textimg}"
+							th:alt="'/img/'+${textbook.textimg}"></img><img th:if="${textbook.style == 2}"
+							th:src="${'data:image/png;base64,'+ textbook.image}" />
+					</a>
+					<th:block th:each="textbook:${textbook}">
+						<p th:text="${textbook.title}"></p>
+						<p th:text="${textbook.price}+'円'"></p>
+					</th:block>
+				</div>
+			</th:block>
+		</div>
+		<footer th:replace="footer"></footer>
 	</main>
 </body>
 
