--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="/css/login.css">
-<title>ログイン</title>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="/css/login.css">
+	<title>ログイン</title>
 </head>
+
 <body>
 	<header>
 		<h1>A大学</h1>
 	</header>
-	
+
 	<div class="container">
-	<form action="/" method="post">
-		<h1>会員ログイン</h1>
-		
-		<p th:if="${errorList}" th:each="error:${errorList}" th:text="${error}" class="error" style="color:red;"></p><br>
-		
-		<input type="text" name="personalNumber" placeholder="個人番号"><br>
-		<input type="password" name="password" placeholder="パスワード"><br>
-		
-		<button type="submit">ログイン</button>
-	</form>
+		<form action="/" method="post">
+			<h1>会員ログイン</h1>
+
+			<p th:if="${errorList}" th:each="error:${errorList}" th:text="${error}" class="error" style="color:red;">
+			</p><br>
+
+			<input type="text" name="personalNumber" placeholder="個人番号"><br>
+			<input type="password" name="password" placeholder="パスワード"><br>
+
+			<button type="submit">ログイン</button>
+		</form>
 	</div>
 
 </body>
+
 </html>
